--- a/index.html
+++ b/index.html
@@ -18,5 +18,29 @@ In July 1967 after many attempts to save the country, a civil war broke out. It 
   <h1>5 Facts About Nigeria You Never Knew</h1>
   <ol>
     <li>Nigeria is the seventh most populous Country</li>
+    <li>The population of Nigerians mainly comprises of Christian</li>
+    <li>English is the official language.
+There are 520 spoken languages in Nigeria but English is the official language.</li>
+    <li>Nigeria as the largest economy in Africa</li>
+    <li>Nigeria has a thriving film industry</li>
   </ol>
+ <h1>The Stages of the Nigerian Constitution And when they where held</h1>
+  <table border="1" width="400" height="250">
+    <tr>
+      <td>The Clifford Constitution</td>
+      <td>1922</td>
+    </tr>
+    <tr>
+      <td>The Richard Constitution</td>
+      <td>1946</td>
+    </tr>
+    <tr>
+      <td>The MacPhersonConstitution</td>
+      <td>1951</td>
+    </tr>
+    <tr>
+      <td>The Lyttleton Constitution</td>
+      <td>1954</td>
+    </tr>
+  </table>
 </body>  
