--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="styles.css">
+</head>
 <body>
   <div id="flag">Happy Independence Day</div> 
   <h1>About The Nigerian Independence</h1>
@@ -43,4 +49,5 @@ There are 520 spoken languages in Nigeria but English is the official language.<
       <td>1954</td>
     </tr>
   </table>
-</body>  
+</body>
+</html>
