--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <title>A Free Nigeria</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
