--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@ In July 1967 after many attempts to save the country, a civil war broke out. It 
   
   <h1>5 Facts About Nigeria You Never Knew</h1>
   <ol>
-    <li>Nigeria is the seventh most populous Country</li>
-    <li>The population of Nigerians mainly comprises of Christian</li>
+    <li>Nigeria is the seventh most populous Country.</li>
+    <li>The population of Nigerians mainly comprises of Christian.</li>
     <li>English is the official language.
 There are 520 spoken languages in Nigeria but English is the official language.</li>
-    <li>Nigeria as the largest economy in Africa</li>
-    <li>Nigeria has a thriving film industry</li>
+    <li>Nigeria as the largest economy in Africa.</li>
+    <li>Nigeria has a thriving film industry.</li>
   </ol>
  <h1>The Stages of the Nigerian Constitution And when they where held</h1>
   <table border="1" width="400" height="250">
